[gd_scene load_steps=15 format=2]

[ext_resource path="res://Axl_mod/Player/Projectiles/Transform/Transfomed Enemies/Throwers/FlameProjectile_Transformed.tscn" type="PackedScene" id=1]
[ext_resource path="res://Axl_mod/Player/Projectiles/Transform/Transfomed Enemies/Enemy_Transformed.gd" type="Script" id=2]
[ext_resource path="res://Axl_mod/Player/Projectiles/Transform/Transfomed Enemies/IdleEnemy_Transformed.gd" type="Script" id=3]
[ext_resource path="res://Axl_mod/Player/Projectiles/Transform/Transfomed Enemies/FallEnemy_Transformed.gd" type="Script" id=4]
[ext_resource path="res://Axl_mod/Player/Projectiles/Transform/Transfomed Enemies/TransformedEnemyDamage.gd" type="Script" id=5]
[ext_resource path="res://src/Actors/Enemy Collision Detector.gd" type="Script" id=6]
[ext_resource path="res://Axl_mod/Player/Projectiles/Transform/Transfomed Enemies/Throwers/Flamethrower_Transformed.gd" type="Script" id=7]
[ext_resource path="res://src/Effects/enemy_shader.tres" type="Shader" id=8]
[ext_resource path="res://src/Actors/Enemies/Throwers/flamethrower.res" type="SpriteFrames" id=12]
[ext_resource path="res://src/Sounds/HIT.wav" type="AudioStream" id=14]
[ext_resource path="res://src/Sounds/Rooster - RisingLava.ogg" type="AudioStream" id=15]

[sub_resource type="ShaderMaterial" id=63]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/Flash = 0.0
shader_param/Should_Blink = 0.0
shader_param/Darken = 1.0
shader_param/Alpha = 1.0
shader_param/Alpha_Blink = 0.0

[sub_resource type="RectangleShape2D" id=70]
extents = Vector2( 9, 24 )

[sub_resource type="RectangleShape2D" id=71]
extents = Vector2( 9, 24 )

[node name="FlameThrower" type="KinematicBody2D" groups=["Enemy Transformed", "Player"]]
collision_layer = 8192
collision_mask = 1073743617
script = ExtResource( 2 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 63 )
position = Vector2( 2, 0 )
z_index = 1
frames = ExtResource( 12 )
animation = "idle"
frame = 5
playing = true
flip_h = true

[node name="fire_origin" type="Node2D" parent="animatedSprite"]
position = Vector2( 23, -1 )

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 70 )

[node name="Enemy Collision Detector" type="KinematicBody2D" parent="." groups=["Enemy Transformed", "Player"]]
collision_layer = 2
collision_mask = 0
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy Collision Detector"]
modulate = Color( 1, 0.913725, 0, 1 )
position = Vector2( 0, 1 )
shape = SubResource( 71 )

[node name="Damage" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Damage"]
stream = ExtResource( 14 )
volume_db = -6.832
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="Idle" type="Node2D" parent="."]
script = ExtResource( 3 )
conflicting_moves = [ "Anything" ]
animation = "idle"

[node name="Fall" type="Node2D" parent="."]
script = ExtResource( 4 )
conflicting_moves = [ "Anything" ]
animation = "idle"

[node name="FlameThrowerAttack" type="Node2D" parent="."]
script = ExtResource( 7 )
actions = [ "fire" ]
animation = "prepare"
projectile = ExtResource( 1 )

[node name="fire_loop" type="AudioStreamPlayer2D" parent="FlameThrowerAttack"]
stream = ExtResource( 15 )
volume_db = -50.0
autoplay = true
max_distance = 400.0
bus = "SFX"

[node name="_raycasts" type="Node2D" parent="."]
visible = false

[node name="Wallcheck Right" type="RayCast2D" parent="_raycasts"]
position = Vector2( 2, -15 )
enabled = true
cast_to = Vector2( 6, 0 )
collision_mask = 1537

[node name="Wallcheck Right2" type="RayCast2D" parent="_raycasts"]
position = Vector2( 2, 0 )
enabled = true
cast_to = Vector2( 6, 0 )
collision_mask = 1537

[node name="Wallcheck Right3" type="RayCast2D" parent="_raycasts"]
position = Vector2( 2, 14.95 )
enabled = true
cast_to = Vector2( 6, 0 )
collision_mask = 1537

[node name="Wallcheck Left" type="RayCast2D" parent="_raycasts"]
position = Vector2( -2, -15 )
enabled = true
cast_to = Vector2( -6, 0 )
collision_mask = 1537

[node name="Wallcheck Left2" type="RayCast2D" parent="_raycasts"]
position = Vector2( -2, 0 )
enabled = true
exclude_parent = false
cast_to = Vector2( -6, 0 )
collision_mask = 1537

[node name="Wallcheck Left3" type="RayCast2D" parent="_raycasts"]
position = Vector2( -2, 14.95 )
enabled = true
cast_to = Vector2( -6, 0 )
collision_mask = 1537

[node name="WallJumpCast Right" type="RayCast2D" parent="_raycasts"]
position = Vector2( 2, -14 )
enabled = true
cast_to = Vector2( 13, 0 )
collision_mask = 1537

[node name="WallJumpCast Right2" type="RayCast2D" parent="_raycasts"]
position = Vector2( 2, 0 )
enabled = true
cast_to = Vector2( 13, 0 )
collision_mask = 1537

[node name="WallJumpCast Right3" type="RayCast2D" parent="_raycasts"]
position = Vector2( 2, 15 )
enabled = true
cast_to = Vector2( 13, 0 )
collision_mask = 1537

[node name="WallJumpCast Left" type="RayCast2D" parent="_raycasts"]
position = Vector2( -2, -14 )
enabled = true
cast_to = Vector2( -13, 0 )
collision_mask = 1537

[node name="WallJumpCast Left2" type="RayCast2D" parent="_raycasts"]
position = Vector2( -2, 0 )
enabled = true
cast_to = Vector2( -13, 0 )
collision_mask = 1537

[node name="WallJumpCast Left3" type="RayCast2D" parent="_raycasts"]
position = Vector2( -2, 15 )
enabled = true
cast_to = Vector2( -13, 0 )
collision_mask = 1537

[node name="Groundcheck" type="RayCast2D" parent="_raycasts"]
position = Vector2( 0, 15 )
enabled = true
cast_to = Vector2( 0, 8 )
